# PreVEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SHADER_MIGRATION.md  download_dependencies.py  vulkan_wrapper_generator.py
Examples/PreVEngineExample/: CMakeLists.txt
Examples/PreVEngineExample/prev_test/: PreVMain.cpp  Tags.h  TestApp.cpp
Examples/Sandbox/: CMakeLists.txt
Examples/Sandbox/sandbox/: PreVMain.cpp  SandboxApp.cpp  SandboxApp.h  Tags.h
PreVEngine/: App.h  Buffers.cpp  Buffers.h  CMakeLists.txt  Common.h  Component.h  Devices.cpp  Devices.h  Engine.h  Events.h  EventsChannel.h  FlagSet.h  Formats.h  IWindow.h  Image.cpp  Image.h  Inputs.h  Instance.cpp  Instance.h  KeyCodes.h  Patterns.h  RenderPass.cpp  RenderPass.h  Scene.h  SceneGraph.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  ThreadPool.h  Utils.h  Validation.cpp  Validation.h  Window.cpp  Window.h  WindowAndroid.h  WindowImpl.cpp  WindowImpl.h  WindowWin32.h  WindowXcb.h
PreVEngine/android/: android_fopen.c  android_fopen.h  android_native.cpp  android_native.h  native.cpp  native.h
PreVEngine/cmake/: FindWayland.cmake
PreVEngine/common/: Common.h  FlagSet.h  PickList.cpp  PickList.h  TagSet.cpp  TagSet.h  ThreadPool.h
PreVEngine/common/pattern/: Nullable.h  Observer.h  Singleton.h
PreVEngine/core/: CoreEvents.h  DeviceProvider.cpp  DeviceProvider.h  Engine.h  Formats.h  Queue.cpp  Queue.h
PreVEngine/core/device/: Device.cpp  Device.h  DeviceExtensions.cpp  DeviceExtensions.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDevices.cpp  PhysicalDevices.h
PreVEngine/core/instance/: Extensions.cpp  Extensions.h  Instance.cpp  Instance.h  Layers.cpp  Layers.h  Validation.cpp  Validation.h
PreVEngine/core/memory/: Allocator.cpp  Allocator.h
PreVEngine/event/: EventHandler.h  EventsChannel.h
PreVEngine/event/internal/: EventChannelQueue.h  EventChannelQueueManager.cpp  EventChannelQueueManager.h  IEventChannelQueue.h
PreVEngine/input/: InputFacade.cpp  InputFacade.h
PreVEngine/input/keyboard/: IKeyboardActionListener.h  ITextListener.h  KeyCodes.h  KeyboardEvents.h  KeyboardInputComponnet.cpp  KeyboardInputComponnet.h
PreVEngine/input/mouse/: IMouseActionListener.h  IMouseScrollListener.h  MouseEvents.h  MouseInputComponent.cpp  MouseInputComponent.h
PreVEngine/input/touch/: ITouchActionListener.h  TouchEvents.h  TouchInputComponent.cpp  TouchInputComponent.h
PreVEngine/platform/android/: android_fopen.c  android_fopen.h  android_native.cpp  android_native.h
PreVEngine/platform/ios/: IOSAppDelegate.h  IOSAppDelegate.mm  IOSUtils.h  IOSUtils.mm  IOSView.h  IOSView.mm  IOSViewController.h  IOSViewController.mm  IOSWindow.h  IOSWindow.mm
PreVEngine/platform/macos/: MacApplication.h  MacApplication.mm  MacView.h  MacView.mm  MacWindow.h  MacWindow.mm
PreVEngine/platform/wayland/: xdg-decoration.c  xdg-decoration.h
PreVEngine/prev/: App.cpp  App.h
PreVEngine/prev/android/: android_fopen.h  android_native.cpp  android_native.h
PreVEngine/prev/common/: Cache.h  Common.h  FlagSet.h  Logger.cpp  Logger.h  PickList.cpp  PickList.h  TagSet.cpp  TagSet.h  ThreadPool.h
PreVEngine/prev/core/: AllocatorProvider.cpp  AllocatorProvider.h  CommandsExecutor.cpp  CommandsExecutor.h  Core.cpp  Core.h  CoreEvents.h  DeferredResourceDestroyer.cpp  DeferredResourceDestroyer.h  DeferredResourceUploader.cpp  DeferredResourceUploader.h  Engine.cpp  Engine.h  EngineConfig.h  Formats.h  IResource.h  Queue.h  ResourceState.h
PreVEngine/prev/event/: EventChannel.h  EventHandler.h  EventsChannel.h
PreVEngine/prev/input/: InputFacade.cpp
PreVEngine/prev/render/: DefaultRenderContextUserData.h  FrameSubmitSync.h  IRenderer.h  IRootRenderer.h  ISwapchain.h  RenderContext.h  Swapchain.cpp  Swapchain.h
PreVEngine/prev/scene/: AllocatorProvider.h  ComputeProvider.cpp  IScene.h  Scene.cpp  Scene.h  SceneConfig.h  SceneEvents.h
PreVEngine/prev/util/: GfxUtils.h  MathUtils.cpp  MathUtils.h  Utils.cpp  Utils.h  VkUtils.cpp  VkUtils.h
PreVEngine/prev/vk_wrapper/: CMakeLists.txt
PreVEngine/prev/window/: AbstractWindow.cpp  AbstractWindow.h  IWindow.h  InputConvertor.cpp  Window.cpp  Window.h  WindowCommon.h  WindowEvents.h
PreVEngine/render/: Swapchain.cpp  Swapchain.h
PreVEngine/scene/: AllocatorProvider.cpp  ComputeProvider.h  IScene.h  RenderContext.h  Scene.h  SceneEvents.h
PreVEngine/util/: MathUtils.h  Utils.h  VkUtils.h
PreVEngine/window/: AbstractWindow.cpp  AbstractWindow.h  IWindow.h  InputConvertor.cpp  InputConvertor.h  Surface.cpp  Surface.h  Window.cpp  Window.h  WindowCommon.h  WindowEvents.h  WindowImpl.cpp  WindowImpl.h
PreVEngineTest/: Animation.h  AssimpCommon.h  CMakeLists.txt  Camera.h  Clouds.h  Culling.h  Font.h  General.h  LensFlare.h  Light.h  Main.cpp  Mesh.h  Particles.h  Pipeline.cpp  Pipeline.h  PrevTestApp.h  RayCasting.h  Renderer.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Shadows.h  Sky.h  SkyBox.h  Terrain.h  TestApp.cpp  TestApp.h  Water.h  formatAll.ps1  main.cpp  matrix.h
PreVEngineTest/android/: build.gradle
PreVEngineTest/common/: AssetManager.h
PreVEngineTest/prev_test/: General.h  Main.cpp  PreVMain.cpp  Tags.h  TestApp.cpp  TestApp.h
PreVEngineTest/render/: CommandBuffersGroup.cpp  CommandBuffersGroup.h  CommandBuffersGroupFactory.cpp  CommandBuffersGroupFactory.h  IAnimation.h  IMaterial.h  IMesh.h  IModel.h  IRenderer.h  MasterRenderer.cpp  MasterRenderer.h  RenderContextUserData.h  VertexDataBuffer.cpp  VertexDataBuffer.h  VertexLayout.h  VertexLayoutComponent.h  ViewFrustum.cpp  ViewFrustum.h
PreVEngineTest/scene/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Fire.cpp  Fire.h  Plane.cpp  Plane.h  Player.cpp  Player.h  Root.cpp  Root.h  Stone.cpp  Stone.h  Text.cpp  Text.h  Time.cpp  Time.h
PreVEngineTest/shaders/: animation.vert  animation_shadows_vert.spv  animation_vert.spv  compile.bat  compile_default.bat  compile_default.sh  compile_quad.bat  compile_quad.sh  compile_terrain.bat  default_frag.spv  font_frag.spv  font_vert.spv  scene.frag
PreVEngineTests/: CMakeLists.txt  Main.cpp
(+2427 files in other folders)
